# RIFF

./: .gitignore  API.rs  Cargo.toml  README.md  test_suite.logs
client/: Cargo.toml
common/: Cargo.toml
examples/: client.rs
js/javascript_client/: client.html  client.js  package-lock.json
riff/: Cargo.toml
riff/src/server/: mod.rs
server/: Cargo.toml
server/src/: lib.rs
src/: RiffClient.rs  lib.rs
src/client/: RiffClientTrait.rs  SecretShare.rs  mailbox.rs  mod.rs
src/client/api/: crypto_provider.rs  mod.rs
src/client/architecture/: counters.rs  hook.rs  mod.rs
src/client/handlers/: crypto_provider.rs  events.rs  initialization.rs  mod.rs  sharing.rs
src/client/preprocessing/: api.rs  mod.rs
src/client/protocols/: mod.rs
src/client/protocols/numbers/: arithmetic.rs  mod.rs
src/client/protocols/shamir/: mod.rs  open.rs  reshare.rs  share.rs
src/client/socket/: events.rs  mod.rs
src/client/util/: constants.rs  crypto.rs  helpers.rs  mod.rs
src/common/: helper.rs  mod.rs
src/ext/: RiffClientRestful.rs  RiffClientTrait.rs  mod.rs
src/server/: cryptoprovider.rs  handlers.rs  hooks.rs  mailbox.rs  mod.rs  restfulAPI.rs  server.rs  trait_server.rs  utility.rs
src/server/datastructure/: intervals.rs  mod.rs
tests/: arithemetic_test.rs  server_tests.rs  test_suite.rs
