[package]
name = "riff"
version = "0.1.0"
authors = ["ScholarOftheFirstSin <45855539+ScholarOftheFirstSin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.10.1"
serde_json = "1.0"
serde = "1.0.111"
periodic = "0.1.1"
