[package]
name = "riff"
version = "0.1.0"
authors = ["ScholarOftheFirstSin <45855539+ScholarOftheFirstSin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.10.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
periodic = "0.1.1"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-util = "0.3.5"
async-trait = "0.1.36"
libmath = "0.1.4"
sodiumoxide = "0.2.5"